...

            <EditText
                android:id="@+id/EventName"
                android:layout_height="50dp"
                android:layout_width="match_parent"
...

            <ImageView
                android:id="@+id/uploaded_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/upload_image_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <Spinner
                android:id="@+id/spinner_facilities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/add_facility_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
            </TextView>
            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/autocomplete_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/geolocation_switchcompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/radius_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/radius"
                android:layout_height="60dp"
                android:layout_width="match_parent"
...
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="Description"
                android:fontFamily="sans-serif"
                android:textColor="@color/figmaBlue"
...
            </TextView>
            <TextView
                android:id="@+id/date_requirements_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/start_date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                        android:visibility="gone" />
                    <TextView
                        android:id="@+id/start_time_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <Button
                        android:id="@+id/start_date_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/end_date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                        android:visibility="gone" />
                    <TextView
                        android:id="@+id/end_time_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <Button
                        android:id="@+id/end_date_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
            </TextView>
            <TextView
                android:id="@+id/registrationDateRequirementsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/registration_date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/registration_date_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/exit_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
...
