...
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:background="@drawable/scanner_frame_border" />

        <!-- Instruction Text -->
        <TextView
            android:id="@+id/instruction_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/raleway_medium"
            android:text="Align The QR Code Within The Frame To Scan"
...
            android:textSize="16sp"
            android:textStyle="bold" />
    </FrameLayout>

    <!-- Button to handle cancel action if needed -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="Cancel"
...
