...
        >

        <ScrollView
            android:id="@+id/scroll_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/toolbar"
            android:fillViewport="true"
            android:scrollbars="vertical"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
...
                android:layout_weight="1"
                android:background="@android:color/white"
                android:contentDescription="home"
                android:src="@drawable/ic_grey_home" />

            <ImageButton
                android:id="@+id/toolbar_qrscanner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:contentDescription="search"
                android:src="@drawable/ic_grey_qrscanner" />
...
